<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_get_note"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.gmail.francoluigi95.taskAndroid.GetActivity">

...
        android:layout_marginLeft="8dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="77dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/buttongetactivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autocomplete_title"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/buttongetactivity"
        android:layout_width="100dp"
...
